feat: add 'subject' field to the courses schema, add sorting by query params, make subject filterable (#40)
